--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,3 +19,24 @@ h2 {
 .rating span {
 	margin: 0.1rem;
 }
+
+container {
+	width: 5em;
+	height: 5em;
+	margin-right: 0;
+	display: flex;
+	place-content: center;
+	overflow: hidden;
+	background: rgba(255, 255, 255, 0.2);
+	border-radius: 30px;
+}
+
+.item {
+	width: 4em;
+	overflow: visible;
+	stroke: black;
+	stroke-width: 5;
+	margin-right: 0;
+	stroke-linejoin: round;
+	stroke-linecap: round;
+}
